--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
   "builds": [
     {
       "src": "index.php",
-      "use": "@swissquote/vercel-php"
+      "use": "@php-runtime/vercel-php"
     }
   ],
   "routes": [
