--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,13 @@
 {
-  "version": 2,
-  "public": false,
-  "builds": [
-    {
-      "src": "index.php",
-      "use": "@php-runtime/vercel-php"
+  "functions": {
+    "api/index.php": {
+      "runtime": "vercel-php@0.7.4"
     }
-  ],
+  },
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/index.php"
+      "dest": "/api/index.php"
     }
   ]
 }
